Page store e product ok

--- a/store-product.html
+++ b/store-product.html
@@ -96,117 +96,42 @@
         </div>
         <!-- Page Content -->
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3 categoria-body text-center">
-                    <h2 class="my-4">Categorias</h2>
-                    <div class="categoria list-group">
-                      <a href="#" class="list-group-item">Vestuário</a>
-                      <a href="#" class="list-group-item">Acessórios</a>
-                      <a href="#" class="list-group-item">Brindes</a>
-                    </div>
+            <div class="card-">
+                <div class="row">
+                    <aside class="col-sm-4 offset-sm-2">
+                        <article class="gallery-wrap"> 
+                            <div class="img-big-wrap">
+                                <ul class="breadcome-menu">
+                                    <li>
+                                        <i class="fa fa-home" aria-hidden="true"></i> <a href="#">Home</a>
+                                        <i class="fa fa-angle-right" aria-hidden="true"></i> <a href="">Vestuário</a>
+                                        <i class="fa fa-angle-right" aria-hidden="true"></i> <a href="">Camisetas</a>
+                                    </li>
+                                </ul>
+                                <div>
+                                    <a href="#"><img class="" src="img/shop/camisa01.jpg"></a>
+                                </div>
+                            </div>
+                        </article>
+                    </aside>
+                    <aside class="col-sm-6">
+                        <article class="card-body">
+                            <div class="item-property mt-5">
+                                <p class="card-text"><span>Arbitrage&Bitcoin&Nest&TCM</span> t-shirt 100% cotton branca</p>                                
+                                <h2>R$ 40,00</h2>
+                                <button class="btn btn-lg car color-box-waanbii" type="button">
+                                    <i class="fa fa-shopping-cart"></i>
+                                </button>
+                                <button class="mb-4 mt-4 btn btn-lg color-box-waanbii" type="button">
+                                    COMPRAR
+                                </button>       
+                            </div>
+                        </article>
+                    </aside>
                 </div>
-                <!-- /.col-lg-3 -->
-
-                <div class="col-lg-9">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa01.jpg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa02.jpg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa03.jpg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa04.jpg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa05.jpg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa06.jpg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa07.jpg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa08.jpg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa09.jpeg" alt=""></a>
-                                <div class="card-body">
-                                    <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
-                                    <h5>R$ 40,00</h5>                                    
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row -->
-                  </div>
-                  <!-- /.col-lg-9 -->
-                </div>
-                <!-- /.row -->
             </div>
-            <!-- /.container -->
-        </section>
+        </div>
+</section>
         
 
         <!-- ##### Contact Area Start ##### -->
