--- a/store.html
+++ b/store.html
@@ -111,7 +111,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa01.jpg" alt=""></a>
+                                <a href="store-product.html"><img class="card-img-top" src="img/shop/camisa01.jpg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
@@ -121,7 +121,7 @@
 
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa02.jpg" alt=""></a>
+                                <a href="ead/login.html"><img class="card-img-top" src="img/shop/camisa02.jpg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
@@ -131,7 +131,7 @@
                         
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa03.jpg" alt=""></a>
+                                <a href="ead/login.html"><img class="card-img-top" src="img/shop/camisa03.jpg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
@@ -141,7 +141,7 @@
 
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa04.jpg" alt=""></a>
+                                <a href="ead/login.html"><img class="card-img-top" src="img/shop/camisa04.jpg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
@@ -151,7 +151,7 @@
 
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa05.jpg" alt=""></a>
+                                <a href="ead/login.html"><img class="card-img-top" src="img/shop/camisa05.jpg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
@@ -161,7 +161,7 @@
 
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa06.jpg" alt=""></a>
+                                <a href="ead/login.html"><img class="card-img-top" src="img/shop/camisa06.jpg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
@@ -171,7 +171,7 @@
 
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa07.jpg" alt=""></a>
+                                <a href="ead/login.html"><img class="card-img-top" src="img/shop/camisa07.jpg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
@@ -181,7 +181,7 @@
 
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa08.jpg" alt=""></a>
+                                <a href="ead/login.html"><img class="card-img-top" src="img/shop/camisa08.jpg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
@@ -191,7 +191,7 @@
 
                         <div class="col-lg-4 col-md-6 mb-4">
                             <div class="card card-store h-100">
-                                <a href="#"><img class="card-img-top" src="img/shop/camisa09.jpeg" alt=""></a>
+                                <a href="ead/login.html"><img class="card-img-top" src="img/shop/camisa09.jpeg" alt=""></a>
                                 <div class="card-body">
                                     <p class="card-text">Scripting The Crypto Money t-shirt cotton preta!</p>
                                     <h5>R$ 40,00</h5>                                    
