Link da sectio store.html da index

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             </div>
         </div>
             <div class="container">
-                <div class="blog_content">
+                <div class="blog_content text-center">
                     <div class="owl-carousel owl-theme">
                         <div class="blog_item">
                             <div class="store-item">
@@ -203,6 +203,7 @@
                             </div>
                         </div>
                     </div>
+                    <a href="store.html" target="_blank" class="btn cryptos-btn mt-30">+ produtos</a>
                 </div>
             </div>
         </section>
@@ -318,9 +319,7 @@
                         <p class="mxy-5">
                             <span>THE CRYPTO MONEY 2019</span>
                         </p>
-                        <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             Copyright &copy;Todos os direitos reservados
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                 </div>
