Fundo no footer

--- a/index.html
+++ b/index.html
@@ -304,28 +304,28 @@
                 </div>
             </div>
         </div>
+        <div class="footer-area">
+            <div class="bottom-footer-area">
+                <div class="container h-100">
+                    <div class="row h-100 align-items-center justify-content-center">
+                        <div class="col-12">
+                            <p class="mxy-5">
+                                <span>THE CRYPTO MONEY 2019</span>
+                            </p>
+                                Copyright &copy;Todos os direitos reservados
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- ##### Contact Area End ##### -->
 
 
 
     <!-- ##### Footer Area Start ##### -->
-    <footer class="footer-area">
-        <!-- Bottom Footer Area -->
-        <div class="bottom-footer-area">
-            <div class="container h-100">
-                <div class="row h-100 align-items-center justify-content-center">
-                    <div class="col-12">
-                        <p class="mxy-5">
-                            <span>THE CRYPTO MONEY 2019</span>
-                        </p>
-                            Copyright &copy;Todos os direitos reservados
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    
     <!-- ##### Footer Area Start ##### -->
 
     <!-- ##### All Javascript Script ##### -->
