Novo card list carousel ead

--- a/ead/index.html
+++ b/ead/index.html
@@ -394,60 +394,66 @@
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <h3>Investindo do Zero</h3>
                     </div>
-                    <div class="col-md-6 col-sm-6 col-xs-6 hidden-xs">
+                    <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="controls pull-right">
                             <a class="left fa fa-chevron-left btn btn-info " href="#carousel-example" data-slide="prev"></a><a class="right fa fa-chevron-right btn btn-info" href="#carousel-example" data-slide="next"></a>
                         </div>
                     </div>
                 </div>
-                <div id="carousel-example" class="carousel slide hidden-xs" data-ride="carousel" data-type="multi">
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
+                <div id="carousel-example" class="carousel slide four_shows_one_move" data-ride="carousel" data-interval="2000" data-pause="hover">
+                     <!--========= Wrapper for slides =========-->
+                    <div class="carousel-inner" role="listbox">
+                        <!--========= 1st slide =========-->
+                        <div class="item">
+                           <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image">
+                                <div class="card video-card">
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image cloneditem-1">
+                                <div class="card video-card">
                                         <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image cloneditem-2">
+                                <div class="card video-card">
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image cloneditem-3">
+                                <div class="card video-card">
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="item">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
+                        <!--========= 2nd slide =========-->
+                        <div class="item active">
+                            <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image">
+                                <div class="card video-card">
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image cloneditem-1">
+                                <div class="card video-card">
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
-                                    <div class="card video-card">
-                                        <div class="embed-responsive embed-responsive-16by9">
-                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
-                                        </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image cloneditem-2">
+                                <div class="card video-card">
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -456,6 +462,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
         <div class="footer-copyright-area">
             <div class="container-fluid">
