--- a/ead/index.html
+++ b/ead/index.html
@@ -57,6 +57,8 @@
 </head>
 
 <body>
+  <!-- ##### Preloader ##### -->
+   <div id="preload" class="preload"></div>
 
     <!-- Start Left menu area -->
     <div class="left-sidebar-pro">
@@ -451,6 +453,13 @@
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image cloneditem-2">
+                                <div class="card video-card">
+                                    <div class="embed-responsive embed-responsive-16by9">
+                                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-3 team_columns_item_image cloneditem-3">
                                 <div class="card video-card">
                                     <div class="embed-responsive embed-responsive-16by9">
                                         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
